--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -526,7 +526,7 @@
             </li>
             <li>
               <a
-                href="https://www.instagram.com/bikeshphotography/"
+                href="https://www.instagram.com/bikeshphotographyandart/"
                 target="_blank"
                 class="icon brands style2 fa-instagram"
                 ><span class="label">Instagram</span></a
