--- a/index.html
+++ b/index.html
@@ -79,10 +79,12 @@
         </ul>
     </div>
     <div class="image imageShadow">
-		<video width="100%" height="auto" controls class="onscroll-image-fade-in">
+		<!-- <video width="100%" height="auto" controls class="onscroll-image-fade-in">
             <source src="videos/Demo.mov" type="video/quicktime">
             Your browser does not support the video tag.
-        </video>
+        </video> -->
+		<a href="https://github.com/taylorhh5/virtualSuitcase"><img src="images/VSApp.png" alt="A picture of Virtual Suitcase App" /></a>
+    </div>
     </div>
 </section>
 
