Added video poster

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </ul>
     </div>
     <div class="image imageShadow">
-		<video width="100%" height="auto" controls class="onscroll-image-fade-in">
+		<video width="100%" height="auto" controls class="onscroll-image-fade-in" poster="images/VSApp.png">
             <source src="videos/Demo.mov" type="video/mp4">
             Your browser does not support the video tag.
         </video>
