--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>Portfolio Hicham Gardeslen</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -24,16 +24,16 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
+								<h1>Hicham Gardeslen</h1>
+								<p>I'm a working student studing Bussines IT & Managment at The School of Applied Sciences in Rotterdam <a href="https://html5up.net">HTML5 UP</a> and released<br />
 								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
-								<li><a href="#about">About</a></li>
+								<li><a href="#intro">Hicham</a></li>
+								<li><a href="#work">work</a></li>
+								<li><a href="#about">study</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -45,30 +45,47 @@
 
 						<!-- Intro -->
 							<article id="intro">
-								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<h2 class="major">Who am I</h2>
+								<span class="image main"><img src="images\IMG_8166.JPG" alt="Me in Italy" /></span>
+								<p>Mijn naam is Hicham Gardeslen. Ik ben een spontane en bedachtzame professional die aan verschillende IT projecten heeft gewerkt gedurende zowel mijn profesionele als werkende bestaan. zie de link naar eeder werk op mijn linkd in pagina By the way, check out my <a href="#work">awesome work</a>.</p>
+								<p>Met een gedegen achtergrond van 30 jaar in IT en projectmanagement, expertise in Business IT & Management. Buiten werk geniet ik van musea, skiën en koken, waar passie en precisie samenkomen.</p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
-								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<h2 class="major">Experiences</h2>
+								<span class="image main"><img src="images\annie-spratt-N46IkbWUvMU-unsplash.jpg" alt="" /></span>
+								<p>Met 3 jaar als Backofficemedewerker bij OGD ict-diensten leidde ik SharePoint-implementaties en automatiseerde processen met Power Apps en Power Automate. In de ICT-servicedesk beheerde ik Topdesk en Azure AD. Mijn veelzijdige ervaring omvatte rollen als QC Analyst en Laboratoriumassistent bij Star-shl, Synergy Food Ingredients, Koppert Biological Systems en Nutricia Medical Nutrition. Met passie voor IT, Business IT & Management studie, en expertise in Power BI, Azure AD, en meer, ben ik toegewijd aan continue groei en resultaatgerichte oplossingen.</p>
+								<p>Buiten werk, geniet ik van het verkennen van musea, skiën, en nieuwe kookavonturen.</p>
+								<ul class="info-list">
+									<li>
+										<strong>Fullname:</strong>
+										<span> Hicham Gardeslen</span>
+									</li>
+									<li>
+										<strong>Birth Date:</strong>
+										<span>September 18th, 1993</span>
+									</li>
+									<li>
+										<strong>Website:</strong>
+										<span><a href="#">https://github.com/hichmok93/</a></span>
+									</li>
+									 <li>
+										 <strong>Email:</strong>
+										 <span>hi.mokhtari@live.com</span>
+									 </li>
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<span class="image main"><img src="images\meritt-thomas-qSYFkZSSTdc-unsplash.jpg" alt="Photo taken by meritt-thomas" /></span>
+								<p>Buiten mijn professionele leven omarm ik mijn passies. Ik vind vreugde in het verkennen van musea, voel de adrenaline tijdens het skiën en experimenteer graag met nieuwe kookrecepten. Mijn drive voor continue groei en resultaatgerichte oplossingen definiëren mijn professionele en persoonlijke reis. Welkom op mijn pagina, waar mijn verhaal zich blijft ontvouwen.</p>
 							</article>
 
 						<!-- Contact -->
 							<article id="contact">
-								<h2 class="major">Contact</h2>
+								<h2 class="major">Neem contact op</h2>
 								<form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
@@ -91,7 +108,7 @@
 								</form>
 								<ul class="icons">
 									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Linkdin</span></a></li>
 									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
@@ -156,7 +173,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									<h4>Icons</h4>
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Linkdin</span>https://www.linkedin.com/in/hicham-gardeslen-91860898/</a></li>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 									</ul>
@@ -292,8 +309,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									<form method="post" action="#">
 										<div class="fields">
 											<div class="field half">
-												<label for="demo-name">Name</label>
-												<input type="text" name="demo-name" id="demo-name" value="" placeholder="Jane Doe" />
+												<label for="demo-name">Hicham</label>
+												<input type="text" name="demo-name" id="demo-name" value="" placeholder="Hicham Gardeslen" />
 											</div>
 											<div class="field half">
 												<label for="demo-email">Email</label>
