--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Neem contact op</h2>
-								<form method="post" action="https://formsubmit.co/hi.mokhtari@live.com">
+								<form method="post" action="mailto:/hi.mokhtari@live.com" enctype="text/plain">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
