--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 										</li>
 										<li>
 											<strong>Website:</strong>
-											<span><a href="#">https://github.com/hichmok93/</a></span>
-											<span><a href="#">https://www.linkedin.com/in/hicham-gardeslen-91860898//</a></span>
+											<span><a href="https://github.com/hichmok93/">Github</a></span>
+											<span><a href="https://www.linkedin.com/in/hicham-gardeslen-91860898//">Linkdin</a></span>
 										</li>
 										 <li>
 											 <strong>Email:</strong>
@@ -121,8 +121,7 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images\meritt-thomas-qSYFkZSSTdc-unsplash.jpg" alt="Photo taken by meritt-thomas" /></span>
-								<p>Buiten mijn professionele leven heb ik een passie voor eten en hetklaarmaken van gerechten.  ik mijn passies. Ik vind vreugde in het verkennen van musea, voel de adrenaline tijdens het skiën en experimenteer graag met nieuwe kookrecepten. Mijn drive voor continue groei en resultaatgerichte</p>
-							</article>
+								<p>ik heb een passie voor koken met verschillende gerechten. Daarnaast ga ik graag na het museum en ben ik vaak in het wedstrijdbad te vinden. 
 
 						<!-- Contact -->
 							<article id="contact">
