--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>H.Gardeslen Portfolio Website</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -116,7 +116,7 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/bg000.jpg" alt="" /></span>
-								<p>Mijn naam is Hicham Gardeslen, Ik werk partime in de IT. In mijn vrije tijd kook ik graag. Gedurende week doe ik aan wedstrijdzwemmen en maak ik kook video's op social media. Bekijk mijn TIktok cooking channel</p>
+								<p>Mijn naam is Hicham Gardeslen, Ik werk partime in de IT. In mijn vrije tijd kook ik graag. Gedurende week doe ik aan wedstrijdzwemmen. ALs hobby maak ik kook video's op social media.<p>Bekijk mijn Tiktok 1-min kook video's</p> </p>
 							
 								
 								<ul class="info-list">
@@ -130,8 +130,9 @@
 									</li>
 									<li>
 										<strong>Website:</strong><a href="https://hichmok93.github.io/portfolio-website/"></a></span>
-										<a href="https://hichmok93.github.io/portfolio-website/" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-										<strong>Tiktok Cooking Channel:</strong><li><a href="https://www.tiktok.com/@hichmoki" class="icon brands fa-tiktok"><span class="label">TikTok</span></a></li>
+										<a href="https://hichmok93.github.io/portfolio-website/" class="icon brands fa-github"><span class="label">GitHub</span></a>
+									</li>
+										<strong>Tiktok Cooking Channel:</strong><a href="https://www.tiktok.com/@hichmoki" class="icon brands fa-tiktok"><span class="label">TikTok</span></a>
 									</li>
 									 <li>
 										 <strong>Email:</strong>
