--- a/index.html
+++ b/index.html
@@ -227,6 +227,14 @@
 				   </div>
 
 				</article>
+
+				<!-- Footer -->
+				<footer id="footer">
+					<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+				</footer>
+
+			</div>
+			
 			
 
 
