--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-moon"></span>
+							<span class="fa-solid fa-laptop-code"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
@@ -33,9 +33,9 @@
 								<li><a href="#intro">Hicham</a></li>
 								<li><a href="#work">Work</a></li>
 								<li><a href="#about">About</a></li>
-								<li><a href="#contact">Contact</a></li>
 								<li><a href="#Skills">Skills</a></li>
 								<li><a href="#Artikel">Artikel</a></li>
+								<li><a href="#contact">Contact</a></li>
 
 							
 								<!--<li><a href="#elements">Elements</a></li>-->
