--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				<article id="Artikel">
 					<h2 class="major">Artikel</h2>
 					<span class="image main"><img src="images/news.jpg" alt="" /></span>
-					<p>Gedurende mijn studie heb ik het extra keuzevak gevolgd schrijfvaardigheid. Voor het vak heb ik verschillende artikelen geschreven, waaronder de film genomineerd voor een Goudekalf El Houb, veel lees plezier.</p>
+					<p>Gedurende mijn studie heb ik het extra keuzevak  schrijfvaardigheid gevolgd. Voor het vak heb ik verschillende artikelen geschreven, waaronder de over de film El Houb genomineerd voor een Goudekalf. veel lees plezier.</p>
 		
 					<h2>Film recensie: El Houb</h2><u>El Houb</u> 
 					<h5>Datum: 22-11-22</h5>
@@ -92,7 +92,7 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images\pic02.jpg.avif" alt="The place I'll be working from, if I would get the job" /></span>
-								<p>Hieronder vind je een weergave van mijn werkervaring uit het verleden tot op heden.</p>
+								<p>Hieronder vind u een weergave van mijn werkervaring.</p>
 
 								<p> <section>
 									<h3 class="major">Work experience</h3>
@@ -114,11 +114,11 @@
 													<td>job</td>
 												</tr>
 													<td>Koppert</td>
-													<td>Afstudeer onderzoek voor mijn opleiding Allround Labborant Techniek College Rotterdam.  </td>
+													<td>Afstudeer onderzoek voor mijn opleiding Allround Labborant Techniek College Rotterdam.</td>
 													<td>2018<td>
 													<td>Internship<td>
 												</tr>
-													<td>STAR-SHL </td>
+													<td>STAR-SHL</td>
 													<td>Medisch laboratorium voor prodcutie werk tervoorbereiding van de uitgevoerde analyses voor het uitgevoerde werk.</td>
 													<td>2022</td>
 													<td>job</td>
@@ -151,7 +151,7 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/bg000.jpg" alt="" /></span>
-								<p>Mijn naam is Hicham Gardeslen, Ik werk partime in de IT. In mijn vrije tijd kook ik graag. Gedurende week doe ik aan wedstrijdzwemmen. ALs hobby maak ik kook video's op social media.<p>Bekijk mijn Tiktok 1-min kook video's</p> </p>
+								<p>Mijn naam is Hicham Gardeslen, Ik werk partime in de IT. Gedurende week doe ik aan wedstrijdzwemmen en kook ik als hobby op social media.<p>Bekijk mijn Ticktock 1-minute kook video's</p> </p>
 							
 								
 								<ul class="info-list">
@@ -167,7 +167,8 @@
 										<strong>Website:</strong><a href="https://hichmok93.github.io/portfolio-website/"></a></span>
 										<a href="https://hichmok93.github.io/portfolio-website/" class="icon brands fa-github"><span class="label">GitHub</span></a>
 									</li>
-										<strong>Tiktok Cooking Channel:</strong><a href="https://www.tiktok.com/@hichmoki" class="icon brands fa-tiktok"><span class="label">TikTok</span></a>
+										<strong>Tiktok Cooking Channel:</strong>
+										<a href="https://www.tiktok.com/@hichmoki" class="icon brands fa-tiktok"><span class="label">TikTok</span></a>
 									</li>
 									 <li>
 										 <strong>Email:</strong>
