--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>H.Gardeslen</h1>
-								<p>I'M A WORKING STUDENT STUDING BUSSINES IT & MANAGMENT AT THE SCHOOL OF APPLIED SCIENCES IN ROTTERDAM<p></p>
+								<p>I'M A partime WORKING STUDENT, Currently STUDING BUSSINES IT & MANAGMENT AT THE SCHOOL OF APPLIED SCIENCES IN ROTTERDAM<p></p>
 							</div>
 						</div>
 						<nav>
@@ -50,9 +50,11 @@
 							<article id="intro">
 								<h2 class="major">Hicham</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Mijn naam is Hicham Gardeslen, Student Business IT & Management aan de Hogeschool. Bekijk de producten die ik heb ontworpen en de projecten waaraan ik heb gewerkt gedurende mijn studerende en werkende periode. Voor een overzicht van mijn <a href="#work"> werk</a> ervaring.</p>
+								<p>Mijn naam is Hicham Gardeslen, Student Business IT & Management aan de Hogeschool. Bekijk de producten die ik heb ontworpen en de projecten waaraan ik heb gewerkt gedurende mijn studerende en werkende periode. Een overzicht van mijn <a href="#work"> werk</a>.</p>
 								<p> <ul class="icons">
 										<li><a href="https://www.linkedin.com/in/hicham-gardeslen-91860898/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://hichmok93.github.io/portfolio-website/" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+										<li><a href="https://www.tiktok.com/@hichmoki" class="icon brands fa-tiktok"><span class="label">TikTok</span></a></li>
 									</ul></p>
 							</article>
 
@@ -60,7 +62,7 @@
 				<article id="Artikel">
 					<h2 class="major">Artikel</h2>
 					<span class="image main"><img src="images/news.jpg" alt="" /></span>
-					<p>Gedurende mijn studie heb ik het extra keuzevak  schrijfvaardigheid gevolgd. Voor het vak heb ik verschillende artikelen geschreven, waaronder de over de film El Houb genomineerd voor een Goudekalf. veel lees plezier.</p>
+					<p>Gedurende mijn studie heb ik het extra keuzevak  schrijfvaardigheid gevolgd. Voor het vak heb ik verschillende artikelen geschreven, waaronder de over de film El Houb genomineerd voor een Goudekalf. veel lees plezier. Neem gerust<a href="#contact"> contact</a>op.</p></p>
 		
 					<h2>Film recensie: El Houb</h2><u>El Houb</u> 
 					<h5>Datum: 22-11-22</h5>
@@ -92,7 +94,7 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images\pic02.jpg.avif" alt="The place I'll be working from, if I would get the job" /></span>
-								<p>Hieronder vind u een weergave van mijn werkervaring.</p>
+								<p>Hieronder vind u een weergave van mijn werkervaring. Mocht u meer willen weten wat mijn persoonlijke <a href="#About"> </a>motivatie</p> en <a href="#skills"> Skills</a>.</p>klik dan op de links</p>
 
 								<p> <section>
 									<h3 class="major">Work experience</h3>
@@ -231,7 +233,7 @@
 								<h2 class="major">Skills</h2>
 								<span class="image main"><img src="images/pic09.avif" alt="database architectuur" /></span>
 								<p>Een weergaven van de programeer skills die ik heb ontplooid gedurende zowel mijn studie als mijn werk ervaring in de IT. 
-								Daarnaast een weergaven van de projecten waar ik aan heb gewerkt en welke programa's daar centraal aan stonden.</p>
+								Daarnaast een weergaven van de projecten waar ik aan heb gewerkt en welke programa's daar centraal aan stonden. <a href="#contact"> contact</a>.</p></p>
 								<p> <section>
 						 
 							<ul class="skill-bars">
@@ -252,7 +254,7 @@
 									<strong>HTML / CSS </strong>
 								</li>
 						<li>
-			<div class="progress percent75"><span>50%</span></div>
+			<div class="progress percent50"><span>50%</span></div>
 									<strong>Natural Language Processing(NLP)"(Minor)</strong>
 								</li>
 			
