--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				<article id="Artikel">
 					<h2 class="major">Artikel</h2>
 					<span class="image main"><img src="images/news.jpg" alt="" /></span>
-					<p>Gedurende mijn studie heb ik het extra keuzevak  schrijfvaardigheid gevolgd. Voor het vak heb ik verschillende artikelen geschreven, waaronder de over de film El Houb genomineerd voor een Goudekalf. veel lees plezier. Neem gerust<a href="#contact"> contact</a>op.</p></p>
+					<p>Gedurende mijn studie heb ik het extra keuzevak  schrijfvaardigheid gevolgd. Voor het vak heb ik verschillende artikelen geschreven, waaronder de over de film El Houb genomineerd voor een Goudekalf. veel lees plezier. Neem gerust<a href="#contact"> contact op.</p></p>
 		
 					<h2>Film recensie: El Houb</h2><u>El Houb</u> 
 					<h5>Datum: 22-11-22</h5>
@@ -94,7 +94,7 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images\pic02.jpg.avif" alt="The place I'll be working from, if I would get the job" /></span>
-								<p>Hieronder vind u een weergave van mijn werkervaring. Mocht u meer willen weten wat mijn persoonlijke <a href="#About"> </a>motivatie</p> en <a href="#skills"> Skills</a>.</p>klik dan op de links</p>
+								<p>Hieronder vind u een weergave van mijn werkervaring. Mocht u meer willen weten wat mijn persoonlijke <a href="#About">motivatie</p>en<a href="#skills">Skills</a>klik dan op de links</p>
 
 								<p> <section>
 									<h3 class="major">Work experience</h3>
