--- a/index.html
+++ b/index.html
@@ -62,7 +62,17 @@
 				<article id="Artikel">
 					<h2 class="major">Artikel</h2>
 					<span class="image main"><img src="images/news.jpg" alt="" /></span>
-					<p>Gedurende mijn studie heb ik het extra keuzevak  schrijfvaardigheid gevolgd. Voor het vak heb ik verschillende artikelen geschreven, waaronder de over de film El Houb genomineerd voor een Goudekalf. veel lees plezier. Neem gerust<a href="#contact"> contact op.</p></p>
+					<p>Gedurende mijn studie heb ik het extra keuzevak  schrijfvaardigheid gevolgd. Voor het vak heb ik verschillende artikelen geschreven, waaronder de over de film El Houb genomineerd voor een Goudekalf. Goedemiddag Anton, 
+ 
+Ik heb afgelopen week gebruikt om mijn portfolio website aan te maken en te presenteren aan een bedrijf waar ik mijn afstudeeronderzoek kan uitvoeren. Wilt u deze bekijken en feedback opgeven? Voordat ik deze aan potentiele bedrijven laat zien. 
+ 
+De website staat online via Github:  https://hichmok93.github.io/portfolio-website/#
+ 
+Als u het leuk lijkt kunt u ook gebruik maken van het Contact formulier, dan zie ik gelijk of deze functie voor andere gebruikers ook werkt. 
+ 
+Daarnaast las ik in de mail dat u aangaf deze week wel tijd te hebben voor een korte gesprek rond het afstudeer proces en/of mogelijk dat u een bedrijf weet dat wel passend zou kunnen zijn voor mijn afstuderen. (zoals Monique aangaf tijdens de meeting die ik met haar had vandaag en vorige week). 
+ 
+Welke dag komt voor u uit voor een online meeting? mijn voorkeur gaan uit op een maandag , donderdag of vrijdag. tijdstip ben ik best flexibel in. ik zal alvast iets op de maandag plannen, mocht het niet uitkomen dan passen we deze aan.  Veel lees plezier.
 		
 					<h2>Film recensie: El Houb</h2><u>El Houb</u> 
 					<h5>Datum: 22-11-22</h5>
@@ -94,7 +104,7 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images\pic02.jpg.avif" alt="The place I'll be working from, if I would get the job" /></span>
-								<p>Hieronder vind u een weergave van mijn werkervaring. Mocht u meer willen weten wat mijn persoonlijke <a href="#About">motivatie</p>en<a href="#skills">Skills</a>klik dan op de links</p>
+								<p>Hieronder vind u een weergave van mijn werkervaring. Mocht u meer willen weten wat mijn persoonlijke Een overzicht van mijn <a href="#About"> motivatie</a> en Een overzicht van mijn <a href="#Skills"> Skills</a>.</p> 
 
 								<p> <section>
 									<h3 class="major">Work experience</h3>
