--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				<article id="Artikel">
 					<h2 class="major">Artikel</h2>
 					<span class="image main"><img src="images/news.jpg" alt="" /></span>
-					<p>Gedurende mijn studie heb ik het extra keuzevak  schrijfvaardigheid gevolgd. Voor het vak heb ik verschillende artikelen geschreven, waaronder de over de film El Houb genomineerd voor een Goudekalf. Veel lees plezier.
+					<p>Gedurende mijn studie heb ik het extra keuzevak schrijfvaardigheid gevolgd. Voor het vak heb ik verschillende artikelen geschreven, waaronder over de film El Houb genomineerd voor een Goudekalf. <p>Veel lees plezier.</p>
 		
 					<h2>Film recensie: El Houb</h2><u>El Houb</u> 
 					<h5>Datum: 22-11-22</h5>
@@ -94,7 +94,7 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images\pic02.jpg.avif" alt="The place I'll be working from, if I would get the job" /></span>
-								<p>Hieronder vind u een weergave van mijn werkervaring. Mocht u meer willen weten wat mijn persoonlijke Een overzicht van mijn <a href="#About"> motivatie</a> en Een overzicht van mijn <a href="#Skills"> Skills</a>.</p> 
+								<p>Hieronder vind u een weergave van mijn werkervaring. Mocht u meer willen weten wat mijn persoonlijke Een overzicht van mijn <a href="#About"> motivatie</a> en een overzicht van mijn <a href="#Skills"> Skills</a>.</p> 
 
 								<p> <section>
 									<h3 class="major">Work experience</h3>
@@ -266,7 +266,7 @@
 
 				</article>
 
-				<!-- Footer -->
+			<Footer -->
 				<footer id="footer">
 					<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 				</footer>
