AI chatbot code added to end of html file.

--- a/index.html
+++ b/index.html
@@ -861,5 +861,21 @@ img {
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
+
+    <!-- Chatbox -->
+
+    <script>
+      window.embeddedChatbotConfig = {
+      chatbotId: "RtD2hv1voOu5QugtSOlSX",
+      domain: "www.chatbase.co"
+      }
+      </script>
+      <script
+      src="https://www.chatbase.co/embed.min.js"
+      chatbotId="RtD2hv1voOu5QugtSOlSX"
+      domain="www.chatbase.co"
+      defer>
+      </script>
+
   </body>
 </html>
