Tasks project section added. Description updated with use of AI.

--- a/index.html
+++ b/index.html
@@ -28,12 +28,16 @@
         <div class="content">
           <h1>Sean Doyle</h1>
           <p class="major">
-            I am a full stack web developer. I enjoy working with people to find
-            solutions!
+            I am a passionate Software Engineer and Full Stack Web Developer who thrives on 
+            collaborating with others to create innovative solutions. I find joy in turning 
+            complex challenges into streamlined, effective results while working closely with 
+            teams to drive success.
           </p>
           <p>
-            Involved in many projects including Web, iOS, Automation, Android, VR,
-            IR, music production, 3D Modeling, 3D Printing, gaming, and other exciting ventures.
+            Engaged in a diverse array of dynamic projects, including Full Stack Web Development, 
+            Software Engineering, iOS, Android, Automation, Integrations, AI, VR, 3D Modeling/Printing, 
+            and other exciting ventures. Passionate about exploring cutting-edge technologies and 
+            creative pursuits that drive innovation.
           </p>
           <ul class="actions stacked">
             <li>
@@ -109,7 +113,7 @@
               </a>
               <h3>Web Development</h3>
               <p>
-                HTML, CSS, Javascript, React, Redux, Node, SQL, Docker, GCP
+                Python, HTML, CSS, Javascript, React, Redux, Node, SQL, Docker, GCP
               </p>
             </section>
             <section>
@@ -219,15 +223,30 @@
       </section>
 
       <section
-      class="spotlight style1 orient-right content-align-left image-position-left onscroll-image-fade-in" id="gosavemore"
+      class="spotlight style1 orient-right content-align-left image-position-left onscroll-image-fade-in" id="first"
     >
       <div class="content">
-        <h2>Go Save More</h2>
+        <!-- <h2>Go Save More</h2>
         <p>
           E-commerce single page app, built with one other full stack developer. 
           Similar to Amazon, users can sign-up, log-in, view products, add to cart, 
           search by name, save for later, view descriptions, and pay with a credit card. 
           Admin can add, edit, or remove products.
+        </p>
+        <p>
+          <a href="http://www.gosavemore.com" class="button"
+            >View Live Website</a
+          >
+           www.GoSaveMore.com</p>  
+        </p> -->
+        <h2>Wheel of Life Task Management</h2>
+        <h3>Current Project - Under Development</h3>
+        <p>
+          A single page app, I am developing on my own. 
+          Similar to Jira, users can sign-up, log-in, create, read, update, and delete tasks 
+          with different catagories. What makes this app special is that tasks are desisnged around 
+          the Wheel of Life with alerts to make sure all catagories are maintaned and imporoved 
+          by breaking tasks into small managable sizes.
         </p>
         <p>
           <a href="http://www.gosavemore.com" class="button"
@@ -239,7 +258,7 @@
         <ul class="actions stacked">
           <li>
             <a
-              href="https://github.com/gosavemore"
+              href="https://github.com/sdoylelambda/task-management"
               class="button"
               >View Code</a
             >
@@ -247,15 +266,11 @@
         </ul>
       </div>
       <div class="image">
-        <a href="http://www.gosavemore.com">
-          <img src="images/goSaveMorePic.png" alt="go save more website image" />
+        <a href="https://task-management-khaki-two.vercel.app/">
+          <img src="images/task.png" alt="Task Management website image" />
         </a>
       </div>
     </section>
-
-
-
-    
 
       <section
         class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in"
@@ -263,9 +278,9 @@
         <div class="content">
           <h2>Appraiser BFF</h2>
           <p>
-            I was Project Lead and a Backend Developer. We coordinated with Data
-            Science and Machine Learning Engineers to estimate home values.
-            Please note, not accurate in all zip codes. Use CA for best results.
+            As Project Lead and Backend Developer, I collaborated closely with Data Science and Machine 
+            Learning Engineers to develop a system for estimating home values. The model is 
+            optimized for accuracy in California, results may vary in other zip codes.
           </p>
           <p>
             <a href="https://www.appraiserbff.xyz/" class="button"
@@ -294,14 +309,13 @@
       
       <section
         class="spotlight style1 orient-right content-align-left image-position-left onscroll-image-fade-in"
-        id="first"
       >
         <div class="content">
-          <h2>Redux Social Messenger</h2>
+          <h2>Allegiance Social Media Platform</h2>
           <p>
-            This was a collaboration to make a single page React app to create
-            and manage groups, send messages, likes, and more all in real-time!
-            Facebook, but for sports!
+            This project was a collaborative effort to develop a single-page React app designed for 
+            creating and managing groups, sending messages, likes, and more—all in real-time. 
+            Imagine Facebook, but built specifically for sports enthusiasts!
           </p>
           <div class="actions side">
             <div class="left">
@@ -351,8 +365,8 @@
         <div class="content">
           <h2>Advice Giver</h2>
           <p>
-            I served as a Co-Team Leader on this project for a single page React
-            app and I created an iOS App for it.
+            I took on the role of Co-Team Leader for this project, leading the development of a 
+            single-page React app and created its accompanying iOS application in xCode with Swift.
           </p>
           <p>
             <a
@@ -384,7 +398,7 @@
         <div class="content">
           <h2>USA Forever Flooring</h2>
           <p>
-            This website I made for a local flooring company. I made contact,
+            This website I made for a flooring company. I made contact,
             performed requirements analysis, negotiated price and delivered app
             on time.
           </p>
@@ -466,6 +480,45 @@
           </a>
         </div>
       </section>
+
+       <!-- Four x2 -->
+       <section
+       class="spotlight style1 orient-right content-align-left image-position-left onscroll-image-fade-in"
+       id="first"
+     >
+       <div class="content">
+         <h2>Wielding the Sword</h2>
+         <p>
+           This website I made for an Auther to promote her book Wielding the sword. 
+           I spearheaded the development of this website, managing the project from inception to completion. 
+           From initiating client contact and conducting a comprehensive requirements analysis to 
+           negotiating pricing and ensuring on-time delivery, I consistently exceeded expectations at 
+           every stage.         
+          </p>
+         <p>
+           <a href="https://wieldingthesword.info/" class="button"
+             >View Live Website</a
+           >
+         </p>
+         <ul class="actions stacked">
+           <li>
+             <a
+               href="https://github.com/sdoylelambda/wielding-the-sword"
+               class="button"
+               >View Code</a
+             >
+           </li>
+         </ul>
+       </div>
+       <div class="image">
+         <a href="https://github.com/sdoylelambda/wielding-the-sword">
+           <img
+             src="images/wielding.png"
+             alt="Image of website for Wielding the Sword"
+           />
+         </a>
+       </div>
+     </section>
       <!-- Two B -->
       <!-- <section
         class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in"
