--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
           <h1>Sean Doyle</h1>
           <p class="major">
             I am a passionate Software Engineer and Full Stack Web Developer who thrives on 
-            collaborating with others to create innovative solutions. I find joy in turning 
+            collaborating with others to create innovative solutions. 
+            </p>
+            <p>
+            I find joy in turning 
             complex challenges into streamlined, effective results while working closely with 
             teams to drive success.
           </p>
@@ -108,7 +111,7 @@
           <div class="items style1 medium onscroll-fade-in">
             <section>
               <!-- <span class="icon style2 major fa-diamond"></span> -->
-              <a href="#first" class="smooth-scroll-middle">
+              <a href="https://github.com/sdoylelambda?tab=repositories" class="smooth-scroll-middle">
                 <span class="icon style2 major fa-desktop"></span>
               </a>
               <h3>Web Development</h3>
@@ -134,7 +137,7 @@
             </section>
 
             <section>
-              <a href="https://github.com/EpicGames">
+              <a href="https://github.com/sdoylelambda?tab=repositories">
               <span class="icon style2 major fa-cubes"></span>
             </a>
               <h3>Automation</h3>
@@ -143,7 +146,7 @@
               </p>
             </section>
             <section>
-              <a href="https://github.com/EpicGames">
+              <a href="https://github.com/sdoylelambda?tab=repositories">
               <span class="icon style2 major fa-child"></span>
             </a>
               <h3>Testing</h3>
@@ -151,7 +154,9 @@
             </section>
 
             <section>
+              <a href="https://github.com/sdoylelambda?tab=repositories">
               <span class="icon style2 major fa-diamond"></span>
+            </a>
               <h3>Integrations</h3>
               <p>APIs, Users, Documents, Calendars, with multiple 3rd party products</p>
             </section>
