Card for Website Made Easy.

--- a/index.html
+++ b/index.html
@@ -228,6 +228,36 @@
       </section>
 
       <section
+        class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in"
+      >
+        <div class="content">
+          <h2>Website Made Easy</h2>
+          <p>
+            Do you need a website? At Website Made Easy, our mission is to empower small and medium-sized businesses by providing them with high-quality, professional websites that help them reach their full potential online. We believe that every business, no matter its size, deserves a strong online presence, and we are committed to making that a reality for our clients.
+          </p>
+          <p>
+            <a href="https://website-made-easy.com/" class="button"
+              >View Live Website</a
+            >
+          </p>
+          <!-- <ul class="actions stacked">
+            <li>
+              <a
+                href="https://github.com/bw-appraisers-bff/back-end"
+                class="button"
+                >View Code</a
+              >
+            </li>
+          </ul> -->
+        </div>
+        <div class="image">
+          <a href="https://website-made-easy.com/">
+            <img src="images/easy.png" alt="Picture of Website Made Easy" />
+          </a>
+        </div>
+      </section>
+
+      <section
       class="spotlight style1 orient-right content-align-left image-position-left onscroll-image-fade-in" id="first"
     >
       <div class="content">
