--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -58,7 +58,7 @@
 								<a href="#" class="image"><img src="images/pic11.jpg" alt="Profile Picture" /></a>
 								<div class="content">
 									<h2 class="major">About Me</h2>
-									<p>Hello! I’m Ibeh Onyebuchi, a passionate web developer with a love for creating dynamic, user-friendly websites. With a background in front-end and back-end development, I bring ideas to life on the web, focusing on performance, accessibility, and aesthetic design.</p>
+									<p>Hello! We are Group 1.</p>
 									<a href="#" class="special">Learn more</a>
 								</div>
 							</div>
